2009-10-06  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/byte-run.el (define-obsolete-face-alias): Doc fix.

	* emacs-lisp/autoload.el (autoload-excludes): New variable.
	(autoload-generate-file-autoloads): Skip files in autoload-excludes.
	(batch-update-autoloads): Process a string value of autoload-excludes,
	set during the build process.
	* Makefile.in (autoloads): Skip preloaded files.  (Bug#4446)

	* net/tramp.el (tramp-handle-start-file-process): Move tramp-error call
	inside with-parsed...  macro so that `v' is defined.

	* progmodes/f90.el (f90-end-of-block, f90-beginning-of-block):
	* progmodes/fortran.el (fortran-end-of-block)
	(fortran-beginning-of-block):
	Also push mark in the macro case.

	* emerge.el (emerge-show-file-name):
	* calc/calc.el (calc-quit):
	* calc/calc-misc.el (calc-big-or-small):
	* calc/calc-graph.el (calc-graph-view):
	* calc/calc-ext.el (calc-reset):
	* calendar/calendar.el (calendar-basic-setup):
	Use window-full-height-p.

	* mail/rmailedit.el (rmail-cease-edit): If there is a Content-Type
	header we don't understand, don't insert another.  (Bug#4624)
	If changing mime charset, insert the new one in the right place.

2009-10-06  Matthew Junker  <matthew.junker@sbcglobal.net>  (tiny change)

	* calendar/cal-tex.el (cal-tex-cursor-month-landscape)
	(cal-tex-cursor-month): Correctly increment the end date for diary and
	holiday listing.  (Bug#4626)

2009-10-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* help-fns.el (describe-function-1): Don't burp is the function is not
	a symbol.

2009-10-05  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/chart.el (chart-face-pixmap-list, chart-new-buffer, chart)
	(chart-axis-range, chart-axis-names, chart-sequece, chart-bar)
	(chart-draw, chart-axis-draw, chart-sort, chart-sort-matchlist)
	(chart-draw-line, chart-bar-quickie): Fix typos in docstrings.

	* emacs-lisp/eieio.el (generic-p, eieiomt-next, eieio-generic-form)
	(eieio-default-superclass): Reflow docstrings.